--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,179 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+ 
+html{
+    font-size: 25px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    height: 100vh;
+    width: 50%;
+    border: 1px solid blue;
+    margin: auto;
 }
+
+header{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: blue;
+    color: aliceblue;
+    padding: 0 0.25rem;
+   
+}
+
+main{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    flex-grow: 1;
+    overflow-y: auto;
+    
+}
+
+
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: aliceblue;
+    height: 50px;
+    width: 100%;
+}
+
+ul{
+    list-style: none;
+    padding: 0 0.25rem 0.25rem;
+    width: 100%;
+}
+
+.item{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0.5rem ;
+    margin: 0.25rem 0;
+    background-color: #eee ;
+}
+
+
+.item input[type='checkbox']{
+   width: 48px;
+   height: 48px;
+   cursor: pointer;
+   margin-right: 1rem ;
+   
+}
+
+.item input[type ='checkbox']:focus + label{
+    text-decoration: underline;
+}
+
+.item > label{
+   font-size: 0.85rem;
+   flex-grow: 1; 
+}
+
+.item svg{
+    width: 48px;
+    cursor: pointer;
+    color: steelblue;
+    font-size: 1.20rem;
+    height: 36px;
+    
+}
+
+.item svg:focus,
+.item svg:hover{
+    color: red;
+}
+
+.addform{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    margin: 0.5rem 0 0;
+    padding: 0 0.5rem 0.25rem;
+    border-bottom: 1px solid #eee;
+
+}
+
+.addform > label{
+    position:absolute;
+    left: -99999px;
+}
+
+.addform input[type='text']{
+   flex-grow: 1;
+   max-width: calc(100% - 50px);
+   min-height: 48px;
+   font-size: 1.3rem;
+   padding: 0.25rem;
+   outline: none;
+   border-radius: 0.25rem;
+   margin-right: 0.25rem;
+
+}
+
+button{
+    color:white;
+    background-color: black;
+    cursor: pointer;
+    height: 48px;
+    min-width: 48px;
+    border-radius: 0.30rem;
+    padding: 0.5rem;
+    font-size: 0.8rem;    
+}
+
+button:focus,
+button:hover{
+    background-color: blue;
+    outline: none;
+}
+
+.Searchform{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    margin: 0.25rem 0 0;
+    padding: 0 0.5rem 0.25rem;
+    border-bottom: 1px solid #eee;
+    
+}
+
+.Searchform label{
+    position: absolute;
+    left: -99999px;
+    
+}
+
+.Searchform input[type='text']{
+    flex-grow: 1;
+    max-width: 100%;
+    min-height: 48px;
+    font-size: 1.3rem;
+    padding: 0.25rem;
+    border-radius: 0.30rem;
+    outline: none;
+}
+
+p{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    margin-top: 30%;
+}
+
